fixed padding issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,7 @@ section .bg h2 {
   flex-direction: column;
   align-items: center; 
   justify-content: space-evenly;
+  padding: 1em;
 }
 .fourth .section-header {
   font-size: clamp(1.5rem, 5vw, 2.5rem);
@@ -219,6 +220,24 @@ section .bg h2 {
   width: fit-content;
 }
 
+@media screen and (max-width: 768px) {
+  .fourth {
+    padding: 1em 0.5em; /* Adjusts padding for smaller screens */
+  }
+
+  .outer {
+    margin-bottom: 10vh; /* Increases bottom margin to account for mobile browser overlays */
+  }
+
+  /* Adjust form input and button sizes if necessary */
+  .form__input,
+  .form__input.large-input,
+  .form textarea,
+  .form__field button {
+    font-size: 1em; /* Adjusts font size for better usability on small screens */
+  }
+}
+
 .fourth .align {
   background: black;
   padding: 2rem;
@@ -227,7 +246,8 @@ section .bg h2 {
   max-width: 700px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 2;
-  opacity: 0.9
+  opacity: 0.9;
+  margin-bottom: 2em;
 }
 
 
